<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@mipmap/bg_violet1_foreground"
    tools:context=".ReservationAutreAdresseActivity">

    <TextView
        android:id="@+id/tvReservation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="Réservation"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:textStyle="bold"
        android:shadowColor="@android:color/background_light"
        android:textSize="34sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:text="Veuillez renseigner la nouvelle adresse :"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:textStyle="bold"
        android:shadowColor="@android:color/background_light"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/etNouvAdresseNum"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/nouvAdresseNum"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/etNouvAdresseVoie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/nouvAdresseVoie"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/etNouvAdresseCP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/nouvAdresseCP"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/etNouvAdresseVille"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/nouvAdresseVille"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btValiderNouvAdresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:onClick="onBtAutreAdresseValiderClick"
        android:text="@string/Valider" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btRéservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:drawableTint="@android:color/holo_blue_dark"
            android:fontFamily="@font/quicksand"
            android:foregroundTint="@android:color/holo_blue_dark"
            android:onClick="onBtReservtionClick"
            android:text="Réservation"
            android:textColor="#000000"
            android:textColorHint="#C83D3D"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btPrestation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:drawableTint="@android:color/holo_blue_dark"
            android:fontFamily="@font/quicksand"
            android:foregroundTint="@android:color/holo_blue_dark"
            android:onClick="onBtPrestationClick"
            android:text="Prestation"
            android:textColor="#000000"
            android:textColorHint="#C83D3D"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btCoiffeuse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:drawableTint="@android:color/holo_blue_dark"
            android:fontFamily="@font/quicksand"
            android:foregroundTint="@android:color/holo_blue_dark"
            android:onClick="onBtCoiffeuseClick"
            android:text="Coiffeuse"
            android:textColor="#000000"
            android:textColorHint="#C83D3D"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btConseils"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:backgroundTintMode="multiply"
            android:drawableTint="@android:color/holo_blue_dark"
            android:fontFamily="@font/quicksand"
            android:foregroundTint="@android:color/holo_blue_dark"
            android:onClick="onBtConseilClick"
            android:text="Conseils"
            android:textColor="#000000"
            android:textColorHint="#C83D3D"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>